err/skimmr-bm.err
Listing '.'...
Listing './bin'...
Compiling './bin/crkb_bm.py'...
***   File "./bin/crkb_bm.py", line 59
    print 'Loading the statements from:', in_path
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dwnl_bm.py'...
***   File "./bin/dwnl_bm.py", line 81
    print 'Reading in the PubMed IDs from:', path
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/exst_bm.py'...
***   File "./bin/exst_bm.py", line 43
    print 'Chopping up the text into paragraphs...'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ixkb_bm.py'...
***   File "./bin/ixkb_bm.py", line 53
    print '*** Creating the fulltext index'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/prep_bm.py'...
***   File "./bin/prep_bm.py", line 60
    print 'Creating the main directories'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/srvr_bm.py'...
***   File "./bin/srvr_bm.py", line 151
    '  exception type : '+`exceptionType`+'\n'+\
                          ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/skimmr_bm'...
Listing './lib/python3.5/site-packages/skimmr_bm/data'...
Compiling './lib/python3.5/site-packages/skimmr_bm/extr.py'...
***   File "./lib/python3.5/site-packages/skimmr_bm/extr.py", line 759
    f.write(`key`+'\t'+','.join([str(x) for x in value])+'\n')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimmr_bm/ifce.py'...
***   File "./lib/python3.5/site-packages/skimmr_bm/ifce.py", line 552
    sys.stderr.write(`line`+'\n')
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/skimmr_bm/proc.py'...
***   File "./lib/python3.5/site-packages/skimmr_bm/proc.py", line 57
    print 'DEBUG - getting the sparse in-memory matrix'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/skimmr_bm/strg.py'...
***   File "./lib/python3.5/site-packages/skimmr_bm/strg.py", line 113
    except UnicodeEncodeError, UnicodeDecodeError:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/skimmr_bm-0.1a2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
